syntax = "proto3";
package metrics;
option go_package = "github.com/nspcc-dev/neofs-node/service/metrics";

service Metrics {
    rpc ResetSpaceCounter(ResetSpaceRequest) returns (ResetSpaceResponse);
}

message ResetSpaceRequest {}
message ResetSpaceResponse {}